Ensure good contrast

--- a/src/analog-clock.scss
+++ b/src/analog-clock.scss
@@ -14,10 +14,10 @@
     fill: black;
   }
   .timeLeft {
-    fill: red;
+    fill: #ff6161;
   }
   .originalTime {
-    fill: #ffcccc;
+    fill: #ffcece;
   }
   text {
     text-anchor: middle;
